Bugfix: KIX17-2235
fixed overlapping after sidebar resizing

--- a/var/httpd/htdocs/skins/Agent/default/css/Base.Overview.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Base.Overview.css
@@ -37,6 +37,7 @@
     }
     .LayoutFixedSidebar > .SidebarColumn {
         overflow-x: hidden;
+        height: 100%;
     }
     .LayoutFixedSidebar.Dashboard > .SidebarColumn {
         overflow-x: visible;
